# evieai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-Powered Agentic Q&A App — Developer Specification (1).docx  ARCHITECTURE.md  DEMO_SCRIPT.md  Dockerfile.base  EXECUTIVE_SUMMARY.md  GAPS.md  HANDOFF.md  IMPORT_WORKITEMS.md  PLAN.md  PRIVACY.md  README.md  ResiQ_AI_Agentic_Q&A_Architecture.pptx  SESSION_CONTEXT.md  SPRINT_ASSIGNMENT_GUIDE.md  azure-devops-workitems.csv  create-sprints.ps1  docker-compose.yml  pyproject.toml
.azure-pipelines/: deploy.yml  mirror-sync.yml  terraform.yml
.claude/: settings.local.json
.wiki/: Architecture.md  Home.md  Infrastructure.md  Operations.md  Service-Restart.md  WIKI-SETUP.md
connectors/: __init__.py  base.py  mappers.py  registry.py  types.py
data/: document_actions.db
db/: check_progress.py  clean_postgres.py  seed_azure_postgres.py  seed_azure_postgres_minimal.py  verify_postgres.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  AZURE_DEVOPS_MANUAL_IMPORT.md  AZURE_DEVOPS_SPRINTS.md  COST_MANAGEMENT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CONFIG.md  DOCUMENTATION.md  DR.md  EVIEAI_AGENT_GOVERNANCE_IMPLEMENTATION_MAP.md  FEATURES.md  INSTALL.md  MCP_SERVER_IMPROVEMENTS.md  OPERATIONAL_GUIDE.md  R1_PERFORMANCE_REPORT.md  SUPPORT.md  TERRAFORM_ROLLBACK.md  codebase-change-order.md  github-actions-setup.md
evieai-mirror.git/: config  packed-refs
orchestrator/: Dockerfile  openapi.yaml  requirements.txt
outputs/: executive-demo-walkthrough.pptx  (+1 more)
scripts/: containerapps.sh  (+6 more)
(+172 files in other folders)
